# twitter_clone

./: db.sqlite3  pyproject.toml
authentication/: forms.py  models.py  urls.py  views.py
authentication/templates/: loginpage.html  signuppage.html
notification/: models.py  urls.py
notification/migrations/: 0001_initial.py
tweet/: forms.py  models.py  urls.py  views.py
tweet/migrations/: 0001_initial.py  0002_auto_20200528_2001.py
tweet/templates/: index.html  tweetpost.html
twitter_clone/: settings.py  urls.py
twitteruser/: admin.py  models.py  urls.py
twitteruser/migrations/: 0001_initial.py
