[tool.poetry]
name = "twitter_clone"
version = "0.1.0"
description = "Replicating a twitter clone to understand how the backend functions for twitter itself and similar apps."
authors = ["Mustafa Prodhan <mustafa.prodhan.317@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
django = "^3.0.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
